# kr6-ros

./: FEEDBACK.md  PLAN_ROS.md  README.md
results/: r0_build.txt  r1_reset_parity.json  r2_first_episode.json  r3_act_c0_ros.json  r4_direct_rerun.json  r4_smolvla_c0_ros.json  r5_freerun.json
ros2_ws/src/kr6_eval/: package.xml  setup.cfg  setup.py
ros2_ws/src/kr6_eval/kr6_eval/: eval_node.py  freerun_eval.py  full_eval.py  r1_parity.py  r2_episode.py  r3_full_eval.py
ros2_ws/src/kr6_eval/launch/: kr6_system.launch.py
ros2_ws/src/kr6_executor/: package.xml  setup.cfg  setup.py
ros2_ws/src/kr6_executor/kr6_executor/: executor_node.py
ros2_ws/src/kr6_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/kr6_msgs/msg/: ActionChunk.msg  JointCmd.msg  Obs.msg
ros2_ws/src/kr6_msgs/srv/: ApplyCmd.srv  ApplyJoint.srv  FinishEpisode.srv  GetChunk.srv  GetObs.srv  Reset.srv  SolveIK.srv
ros2_ws/src/kr6_policy/: package.xml  setup.cfg  setup.py
ros2_ws/src/kr6_policy/kr6_policy/: policy_node.py
ros2_ws/src/kr6_sim/: package.xml  setup.py
ros2_ws/src/kr6_sim/kr6_sim/: sim_node.py
scripts/: run_eval.sh  run_freerun.sh
