<?xml version="1.0"?>
<package format="3">
  <name>kr6_policy</name>
  <version>0.1.0</version>
  <description>KR6 VLA system: kr6_policy (kr6-ros)</description>
  <maintainer email="cohenshahar17@gmail.com">Shahar Cohen</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>kr6_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
